# local-video

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  main.ts  simplealert.ts  styles.css  types.ts  utils.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  db.rs  lib.rs  logger.rs  main.rs  metadata.rs  video.rs
src/components/loading/: Loading.css  Loading.tsx
src/components/modal/: Modal.css  Modal.tsx
src/components/video-card/: VideoCard.css  VideoCard.tsx
src/components/video-detail/: VideoDetail.tsx
src/pages/: Settings.css  Settings.tsx
