[package]
name = "local-video"
version = "0.1.0"
description = "Loval Video Manager"
authors = ["jing.wang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "local_video_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
md5 = "0.7"
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = "0.4"
rfd = "0.12"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
regex = "1.5"
once_cell = "1.20.2"

[profile.release]
panic = "abort"     #当发生panic时，去除昂贵的panic 清理逻辑
codegen-units = 1   #一个接一个的编译 crate， 以便编译器能够更好的进行优化
lto = true          #启用链接优化
opt-level = "s"     #为二进制大小进行优化
strip = true        #去除调试符号
